--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
    <script src = "/socket.io/socket.io.js"></script>
    
    <script>
-      var socket = io();
+   var socket = io();
+   socket.emit('clientEvent', 'Sent an event from the client!');
    </script>
+
    <body>Hello world</body>
 </html>
